--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,9 +1,9 @@
 # Test requirements
 # Note: These packages are stored outside of the setup.py, to maintain a
 # single source of truth, and allow the extras to be installed in isolation.
-django-test-plus==1.4.0
-Django>=2.1.15,<4
+django-test-plus==2.2.0
+Django>=2.1.15,<=4
 djangorestframework>=3.9.4
-pytest-cov==2.6.1
-pytest-django==3.4.8
-pytest==4.4.1
+pytest-cov==3.0.0
+pytest-django==4.5.2
+pytest==7.1.2
