Add pytz as dependency for django40 drf 311 and 312
drf 13 reintroduces it as a dependency but both 11 and 12 don't have it natively

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ deps =
     drf311: djangorestframework==3.11.2
     drf312: djangorestframework==3.12.4
     drf313: djangorestframework==3.13.1
+    django40-drf{311,312}: pytz
 extras = test
 
 [testenv:black]
