--- a/tox.ini
+++ b/tox.ini
@@ -7,13 +7,14 @@ envlist =
     py37-django22-drf{310}
     {py38,py39}-django22-drf{39,310,311,312,313}
     {py37,py38,py39}-django32-drf{311,312,313}
-    {py38,py39}-django40-drf{311,312,313}
+    {py38,py39,py310}-django40-drf{311,312,313}
 
 [gh-actions]
 python =
     3.7: py37
     3.8: py38,black,flake8,docs
     3.9: py39,black,flake8,docs
+    3.10: py310,black,flake8,docs
 
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
