Update python and django support
Drop django 3.0 and 3.1

--- a/tox.ini
+++ b/tox.ini
@@ -4,14 +4,16 @@ envlist =
     flake8
     codecov
     docs
-    {py36,py37,py38}-django{21,22}-drf{39,310,311}
-    {py36,py37,py38}-django{30}-drf{310,311}
+    py37-django22-drf{310}
+    {py38,py39}-django22-drf{39,310,311,312,313}
+    {py37,py38,py39}-django32-drf{311,312,313}
+    {py38,py39}-django40-drf{311,312,313}
 
 [gh-actions]
 python =
-    3.6: py36
     3.7: py37
     3.8: py38,black,flake8,docs
+    3.9: py39,black,flake8,docs
 
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
@@ -19,12 +21,14 @@ setenv =
     PYTHONDONTWRITEBYTECODE=1
 commands = pytest {posargs}
 deps =
-    django21: Django==2.1.15
-    django22: Django==2.2.8
-    django30: Django==3.0.0
+    django22: Django==2.2.28
+    django32: Django==3.2.13
+    django40: Django==4.0.5
     drf39: djangorestframework==3.9.4
     drf310: djangorestframework==3.10.3
-    drf311: djangorestframework==3.11.0
+    drf311: djangorestframework==3.11.2
+    drf312: djangorestframework==3.12.4
+    drf313: djangorestframework==3.13.1
 extras = test
 
 [testenv:black]
