--- a/tox.ini
+++ b/tox.ini
@@ -4,17 +4,17 @@ envlist =
     flake8
     codecov
     docs
-    py37-django22-drf{310}
-    {py38,py39}-django22-drf{39,310,311,312,313}
-    {py37,py38,py39}-django32-drf{311,312,313}
-    {py38,py39,py310}-django40-drf{311,312,313}
+    {py38,py39}-django{32}-drf{312,313,314,315}
+    {py38,py39,py310,py311,py312}-django{42}-drf{314,315}
+    {py310,py311,py312}-django{50}-drf{314,315}
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38,black,flake8,docs
     3.9: py39,black,flake8,docs
     3.10: py310,black,flake8,docs
+    3.11: py311,black,flake8,docs
+    3.12: py312,black,flake8,docs
 
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
@@ -22,15 +22,13 @@ setenv =
     PYTHONDONTWRITEBYTECODE=1
 commands = pytest {posargs}
 deps =
-    django22: Django==2.2.28
-    django32: Django==3.2.13
-    django40: Django==4.0.5
-    drf39: djangorestframework==3.9.4
-    drf310: djangorestframework==3.10.3
-    drf311: djangorestframework==3.11.2
-    drf312: djangorestframework==3.12.4
-    drf313: djangorestframework==3.13.1
-    django40-drf{311,312}: pytz
+    django32: Django==3.2
+    django42: Django==4.2
+    django50: Django==5.0
+    drf312: djangorestframework==3.12
+    drf313: djangorestframework==3.13
+    drf314: djangorestframework==3.14
+    drf315: djangorestframework==3.15
 extras = test
 
 [testenv:black]
