--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [flake8]
-extend-ignore = E203  # Spaces before ":", which conflicts with black
+# Ignore spaces before ":", which conflicts with black
+extend-ignore = E203
 
 [wheel]
 universal = 1
