--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps =
 extras = test
 
 [testenv:black]
-commands = black rest_framework_serializer_extensions tests
+commands = black rest_framework_serializer_extensions tests --check --diff -C
 skip_install = true
 deps =
     -c requirements-dev.txt
